versioned_docs/version-2.4/reference/subsystems/ipython.mdx
---
title: ipython
description: The IPython enhanced REPL (https://ipython.org/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The IPython enhanced REPL (https://ipython.org/).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[ipython]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--ipython-version=<str>`}
  env_repr='PANTS_IPYTHON_VERSION'
  toml_repr={`[ipython]
version = <str>`}
  default_repr={`ipython==7.16.1`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--ipython-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_IPYTHON_EXTRA_REQUIREMENTS'
  toml_repr={`[ipython]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `console_script`

<Option
  cli_repr={`--ipython-console-script=<str>`}
  env_repr='PANTS_IPYTHON_CONSOLE_SCRIPT'
  toml_repr={`[ipython]
console_script = <str>`}
  default_repr={`ipython`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--ipython-entry-point=<str>`}
  env_repr='PANTS_IPYTHON_ENTRY_POINT'
  toml_repr={`[ipython]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `ignore_cwd`

<Option
  cli_repr={`--[no-]ipython-ignore-cwd`}
  env_repr='PANTS_IPYTHON_IGNORE_CWD'
  toml_repr={`[ipython]
ignore_cwd = <bool>`}
  default_repr={`True`}
>

Whether to tell IPython not to put the CWD on the import path.

Normally you want this to be True, so that imports come from the hermetic environment Pants creates.

However IPython&#x3C;7.13.0 doesn&#x27;t support this option, so if you&#x27;re using an earlier version (e.g., because you have Python 2.7 code) then you will need to set this to False, and you may have issues with imports from your CWD shading the hermetic environment.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
